# warhammer-battlefleet

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build.sh  debug-client.sh  visuals.ai
client/: jsconfig.json  package-lock.json  package.json
client/src/: index.css  index.html  index.js
client/src/battle/: battle.js
client/src/data/: data.js  data.json
client/src/fonts/: fonts.css
client/src/menus/: fleetmenu.html  mainmenu.html  mainsettingsmenu.html  menus.css  menus.js
client/src/static/: flex.css
cmake/: mac.cmake  win.cmake
server/: CMakeLists.txt
server/src/: debug.cpp  debug.h  init.cpp  loop.cpp  renderer.cpp  renderer.h  ui.cpp  ui.h
server/src/legacy/common/mechanic/: movement.h
server/src/loader/: loader.h
server/src/objects/: armament.h  vesseltype.h
server/src/settings/: settings.h
server/test/: test.py
server/test/fonts/: fonts.css
src/: init.cpp  init.h  loop.cpp  loop.h  renderer.cpp  renderer.h  window.cpp  window.h
src/client/: main.cpp  test.cpp
src/common/data/: imerial.h
src/common/mechanic/: movement.cpp  movement.h
src/common/objects/: vessel.h  vesseltype.h
src/legacy/client/: test.cpp
src/legacy/common/mechanic/: movement.cpp
src/objects/: vessel.h
src/server/: armament.h  battlespace.h  fleet.h  vessel.h
test/: test.py
